# g4_Filwett_project

./: CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.hh  ElectricField.cpp  ElectricField.hh  README.md  VolumeConstruction.cpp  VolumeConstruction.hh  action.cpp  action.hh  event.cpp  event.hh  generator.cpp  generator.hh  gui.mac  init_vis.mac  main.cpp  particle_data.txt  physics.cpp  physics.hh  run.cpp  run.hh  stepping.cpp  stepping.hh  vis.mac
filwett_simion/: fil_inst_res.fly2  fil_inst_res.iob  fil_inst_res.rec  grid_particles.fly2  rand_particles.fly2  res_inst.pa#  res_inst.pa0  res_inst.pa1  res_inst.pa2
